fix test population